--- a/index.html
+++ b/index.html
@@ -21,32 +21,37 @@
         <link rel="stylesheet" href="./assets/css/style.css" />
     </head>
     <body>
+        <!-- PC Header -->
+        <div class="fixed-header">
+            <div class="content">
+                <!-- Navbar -->
+                <nav class="navbar">
+                    <!-- Logo -->
+                    <img src="./assets/img/logo.svg" alt="Besnik." />
+
+                    <!-- Navigation -->
+                    <ul>
+                        <li><a href="#!">Home</a></li>
+                        <li><a href="#!">Features</a></li>
+                        <li><a href="#!">Services</a></li>
+                        <li><a href="#!">Resources</a></li>
+                        <li><a href="#!">Contact</a></li>
+                    </ul>
+
+                    <!-- Action -->
+                    <div class="actions">
+                        <a href="#!" class="action-link">Sign in</a>
+                        <a href="#!" class="btn action-btn">Sign up</a>
+                    </div>
+                </nav>
+            </div>
+        </div>
+
         <!-- Thẻ main giống thẻ div: nhưng nó có ngữ nghĩa là ôm trọn phần bố cục của trang web -->
-        <main style="overflow: hidden">
-            <!-- Header -->
-            <header class="header">
+        <main>
+            <!-- Hero-wrap: chứa khối bao bọc hero -->
+            <div class="hero-wrap">
                 <div class="content">
-                    <!-- Navbar -->
-                    <nav class="navbar">
-                        <!-- Logo -->
-                        <img src="./assets/img/logo.svg" alt="Besnik." />
-
-                        <!-- Navigation -->
-                        <ul>
-                            <li><a href="#!">Home</a></li>
-                            <li><a href="#!">Features</a></li>
-                            <li><a href="#!">Services</a></li>
-                            <li><a href="#!">Resources</a></li>
-                            <li><a href="#!">Contact</a></li>
-                        </ul>
-
-                        <!-- Action -->
-                        <div class="actions">
-                            <a href="#!" class="action-link">Sign in</a>
-                            <a href="#!" class="btn action-btn">Sign up</a>
-                        </div>
-                    </nav>
-
                     <!-- Hero -->
                     <!-- Phần header lớn như này có nội dung như vậy ta gọi là: hero -->
                     <div class="hero">
@@ -71,7 +76,7 @@
                         />
                     </div>
                 </div>
-            </header>
+            </div>
 
             <!-- Clients -->
             <div class="clients">
