--- a/index.html
+++ b/index.html
@@ -27,17 +27,17 @@
                 <!-- Navbar -->
                 <nav class="navbar">
                     <!-- Logo -->
-                    <a href="#!">
+                    <a href="/">
                         <img src="./assets/img/logo.svg" alt="Besnik." />
                     </a>
 
                     <!-- Navigation -->
                     <ul>
-                        <li><a href="#!">Home</a></li>
-                        <li><a href="#!">Features</a></li>
-                        <li><a href="#!">Services</a></li>
-                        <li><a href="#!">Resources</a></li>
-                        <li><a href="#!">Contact</a></li>
+                        <li><a href="#home">Home</a></li>
+                        <li><a href="#services">Services</a></li>
+                        <li><a href="#features">Features</a></li>
+                        <li><a href="#resources">Resources</a></li>
+                        <li><a href="#contact">Contact</a></li>
                     </ul>
 
                     <!-- Action -->
@@ -50,7 +50,7 @@
         </div>
 
         <!-- Thẻ main giống thẻ div: nhưng nó có ngữ nghĩa là ôm trọn phần bố cục của trang web -->
-        <main>
+        <main id="home">
             <!-- Hero-wrap: chứa khối bao bọc hero -->
             <div class="hero-wrap">
                 <div class="content">
@@ -132,7 +132,7 @@
             </div>
 
             <!-- Guides: Hướng dẫn -->
-            <div class="guides">
+            <div id="services" class="guides">
                 <div class="content">
                     <h2 class="sub-title">How its works?</h2>
                     <p class="desc">
@@ -202,7 +202,7 @@
             </div>
 
             <!-- Feature: tính năng, nổi bật -->
-            <div class="feature">
+            <div id="features" class="feature">
                 <div class="content">
                     <header>
                         <h2 class="sub-title">Featured Properties</h2>
@@ -350,7 +350,7 @@
             </div>
 
             <!-- Stats: Số liệu thống kê -->
-            <div class="stats">
+            <div id="resources" class="stats">
                 <div class="content">
                     <div class="row">
                         <div class="img-blog">
@@ -538,7 +538,7 @@
             </div>
 
             <!-- Footer -->
-            <footer class="footer">
+            <footer id="contact" class="footer">
                 <div class="content">
                     <div class="row row-top">
                         <!-- Product -->
