--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 
                     <!-- Navigation -->
                     <ul>
+                        <!-- Để một dấu # cũng có nghĩa là trôi về đầu trang -->
                         <li><a href="#home">Home</a></li>
                         <li><a href="#services">Services</a></li>
                         <li><a href="#features">Features</a></li>
