add responsive section hero, works, feature

--- a/index.html
+++ b/index.html
@@ -242,25 +242,25 @@
                     </div>
 
                     <div class="images">
-                        <a href="#!">
+                        <a class="spacing-tablet" href="#!">
                             <img
                                 src="./assets/img/meundies.svg"
                                 alt="meundies"
                             />
                         </a>
-                        <a href="#!">
+                        <a class="spacing-tablet" href="#!">
                             <img src="./assets/img/slack.svg" alt="slack" />
                         </a>
-                        <a href="#!">
+                        <a class="spacing-tablet" href="#!">
                             <img src="./assets/img/amazon.svg" alt="amazon" />
                         </a>
-                        <a href="#!">
+                        <a class="spacing-tablet" href="#!">
                             <img
                                 src="./assets/img/commerce.svg"
                                 alt="commerce"
                             />
                         </a>
-                        <a href="#!">
+                        <a class="spacing-tablet" href="#!">
                             <img
                                 src="./assets/img/sitepoint.svg"
                                 alt="sitepoint"
