--- a/index.html
+++ b/index.html
@@ -637,7 +637,7 @@
                         </div>
                     </div>
 
-                    <div class="row">
+                    <div class="row row-qty">
                         <div class="quantity-item">
                             <strong class="quantity-title">2,500</strong>
                             <p class="quantity-desc">Homes For Sale</p>
