add reponsive mobile

--- a/index.html
+++ b/index.html
@@ -238,7 +238,9 @@
 
                     <div class="row">
                         <p>More than 45,000+ companies trust besnik</p>
-                        <p>5 Star Ratings (2k+ Review)</p>
+                        <p class="hide-on-monile">
+                            5 Star Ratings (2k+ Review)
+                        </p>
                     </div>
 
                     <div class="images">
@@ -484,6 +486,11 @@
                                 </div>
                             </div>
                         </div>
+                    </div>
+
+                    <!-- view all mobile -->
+                    <div class="view-all show-on-mobile">
+                        <a href="#!" class="btn">View All Properties</a>
                     </div>
                 </div>
             </div>
@@ -756,7 +763,7 @@
                     </div>
                 </div>
 
-                <div class="row">
+                <div class="row row-bottom">
                     <img src="./assets/img/logo.svg" alt="" class="logo" />
                     <p class="copyright">
                         Copyright 2020.com, All rights reserved.
